.kube/eks/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: linqra
  labels:
    name: linqra
