.kube/eks/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linqra-backend
  namespace: linqra
  labels:
    app: linqra-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linqra-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: linqra-backend
    spec:
      containers:
        - name: api-gateway
          image: 945104357909.dkr.ecr.us-west-2.amazonaws.com/linqra-backend:latest
          ports:
            - containerPort: 7777
          volumeMounts:
            # Mount the vault file
            - name: vault-volume
              mountPath: /app/secrets
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health
              port: 7777
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 7777
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
          resources:
            requests:
              memory: "1.5Gi"
              cpu: "600m"
            limits:
              memory: "3Gi"
              cpu: "1500m"
      volumes:
        - name: vault-volume
          secret:
            secretName: linqra-vault-secret
            items:
              - key: vault-file
                path: vault-ec2.encrypted
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: linqra
spec:
  type: NodePort
  selector:
    app: linqra-backend
  ports:
    - protocol: TCP
      port: 7777
      targetPort: 7777
