.kube/eks/minio-service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: linqra
  labels:
    app: minio
    environment: external
spec:
  type: ClusterIP
  ports:
    - name: s3-api
      port: 9000
      targetPort: 9000
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-service
  namespace: linqra
  labels:
    app: minio
    environment: external
subsets:
  - addresses:
      - ip: 172.31.4.38  # EC2 Polaris private IP
    ports:
      - name: s3-api
        port: 9000
        protocol: TCP
