.kube/eks/ollama-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: linqra
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 11434
      targetPort: 11434
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ollama-service
  namespace: linqra
subsets:
  - addresses:
      - ip: 172.31.4.38  # EC2 Polaris private IP
    ports:
      - name: http
        port: 11434
        protocol: TCP
