.kube/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linqra-ingress
  namespace: linqra
  annotations:
    # Core: Tell AWS to create an ALB
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    
    # Network: Discovery
    alb.ingress.kubernetes.io/target-type: ip
    
    # SSL: Use your ACM Certificate
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:945104357909:certificate/d0ab9cbb-c612-4242-865e-9eba2b8105c3
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    
    # Health Checks
    alb.ingress.kubernetes.io/healthcheck-path: /health # React health check
    
spec:
  rules:
    - host: linqra.com # Optional: Remove if testing without DNS
      http:
        paths:
          # 1. API: Send /api/* to Backend
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: linqra-backend-service
                port:
                  number: 7777
          # 2. Keycloak/Other: (Add if needed)
          
          # 3. Root: Send everything else to Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linqra-frontend-service
                port:
                  number: 80
